--- a/admin/css/admin-header.less
+++ b/admin/css/admin-header.less
@@ -10,7 +10,7 @@
 
     #fontsampler-menu {
         ul {
-            border-bottom: 1px solid @fs_color_text;
+            border-bottom: 4px solid @fs_color_link;
             margin: 0;
             padding: 0 1em;
 
