--- a/includes/partials/button-details.twig
+++ b/includes/partials/button-details.twig
@@ -1,4 +1,4 @@
 <button class="fontsampler-toggle-show-hide fontsampler-button-link">
-    <span>Show details</span>
+    <span>Edit details</span>
     <span>Hide details</span>
 </button>
