--- a/admin/css/fontsampler-admin.less
+++ b/admin/css/fontsampler-admin.less
@@ -1,10 +1,14 @@
 @import "admin-variables.less";
+@import "admin-buttons.less";
 @import "../../css/fontsampler-custom-rangeslider.less";
+
 @import "admin-settings.less";
 @import "admin-sampler.less";
 @import "admin-fontsets.less";
+@import "admin-options.less";
+
 @import "admin-header.less";
-@import "admin-buttons.less";
+@import "admin-footer.less";
 
 /*
  * Scope all css to be contained only within the fontsampler wrapper
@@ -21,8 +25,8 @@
 
     fieldset label, label.fontsampler-admin-label-block {
         display: block;
-        color: #666;
-        margin: 1em 0;
+        color: @fs_color_text_medium;
+        margin: 0.5em 0;
 
         &:hover, &:focus {
             input, select {
@@ -51,9 +55,22 @@
         }
     }
 
+    input[type=text], textarea {
+        border: 2px solid @fs_color_medium;
+
+        &:hover, &:focus {
+            box-shadow: none;
+            border: 2px solid @fs_color_ok_light;
+        }
+    }
+
     fieldset {
         border: 1px solid #ccc;
         padding: 1em;
+
+        &.no-padding {
+            padding: 0;
+        }
 
         legend {
             font-weight: bold;
@@ -111,7 +128,7 @@
 
     small {
         color: #AAA;
-        font-size: small;
+        font-size: smaller;
         font-family: sans-serif;
         line-height: 1em;
         margin-top: 0.5em;
@@ -142,46 +159,6 @@
     td .fileformat {
         display: inline-block;
         width: 4em;
-    }
-
-    footer {
-        margin: 1.5em 1.5em 0 0;
-        padding: 1em 2em 0.5em;
-        background: white;
-        ul {
-            overflow: auto;
-        }
-        li {
-            box-sizing: border-box;
-            display: inline-block;
-            float: left;
-            padding-right: 1em;
-            width: 20%;
-            max-width: 120px;
-
-            > a {
-                display: block;
-                height: 0;
-                padding-top: 150/240*100%;
-                position: relative;
-                text-align: center;
-                width: 100%;
-
-                img {
-                    display: block;
-                    height: 100%;
-                    top: 0;
-                    left: 0;
-                    right: 0;
-                    position: absolute;
-                }
-            }
-            > img {
-                display: block;
-                height: 150/240*100/5%;
-                width: 100%;
-            }
-        }
     }
 
     label {
@@ -502,120 +479,6 @@
         margin-bottom: 1em;
     }
 
-    .fontsampler-options {
-
-        &.ui-accordion-disabled {
-            h3 {
-                color: @fs_color_disabled !important;
-                cursor: not-allowed;
-            }
-        }
-
-        // accordion header
-        h3 {
-            background: @fs_color_light;
-            color: @fs_color_text_medium;
-            cursor: pointer;
-            height: 1em;
-            padding: 0.5em 1em;
-            outline: none;
-            margin-bottom: 0;
-            margin-top: 10px;
-
-            &:hover,
-            &:focus {
-                color: @fs_color_link;
-            }
-
-            &.ui-accordion-header-active {
-                color: @fs_color_text_medium !important;
-            }
-        }
-
-        // accordion content
-        fieldset {
-            border: 3px solid @fs_color_light;
-            display: none;
-            margin: 0 0 10px;
-
-            & > div {
-                & > label {
-                    margin: 0.5em 0;
-                }
-            }
-        }
-    }
-
-    // unified look for a options row that contains from left to right:
-    // a label, custom options with radio, default options with radio
-    .fontsampler-options-row {
-        clear: both;
-        overflow: auto;
-
-        // every second row with background
-        &:nth-of-type(2n + 1) {
-            background: @fs_color_light;
-        }
-
-        // all children in one row: label, settings, default
-        & > * {
-            box-sizing: border-box;
-            display: inline-block;
-            float: left;
-        }
-
-        & > strong {
-            padding: 0.25em 0 0 0.5em;
-            width: 20%;
-            small {
-                display: block;
-                font-weight: normal;
-            }
-        }
-
-        & > div {
-            width: 39%;
-
-            &:nth-of-type(1) {
-                border-left: 5px solid @fs_color_white;
-                border-right: 3px solid @fs_color_white;
-            }
-
-            .settings-description + input[type=text] {
-                margin-left: 1.75em;
-                margin-bottom: 0.5em;
-            }
-
-            .upload-custom-img {
-                .button-add();
-            }
-        }
-    }
-
-    .fontsampler-options-settings .fontsampler-options-row > div:nth-of-type(1) {
-        border-right: 0;
-    }
-
-    .fontsampler-options-features-details {
-        overflow: auto;
-        display: none;
-        margin-left: 1.7em;
-
-        input[type=range] {
-            width: 100%;
-        }
-
-        input.current-value {
-            width: 3em;
-        }
-
-        label {
-            display: inline-block;
-            margin-top: 0.25em;
-            margin-bottom: 0.25em;
-        }
-    }
-
     label.fontsampler-label-disabled {
         .settings-description {
             color: @fs_color_disabled;
@@ -626,9 +489,14 @@
         display: inline-block;
         margin: 0.5em 0;
 
+        &.block {
+            display: block;
+        }
+
         input[type=radio] {
             display: inline-block;
-            margin: -0.1em 0.5em 0em;
+            margin: 0.1em 0.5em 0em;
+            vertical-align: top;
         }
         span {
             display: inline-block;
@@ -660,43 +528,6 @@
         padding: 0 1em;
         margin: 0;
         vertical-align: text-bottom;
-    }
-
-    .fontsampler-options {
-        fieldset > div > label {
-            display: inline-block;
-        }
-    }
-
-    .fontsampler-css-color-block {
-        border: 1px solid @fs_color_text;
-        border-radius: 0.25em;
-        display: inline-block;
-        height: 1em;
-        width: 1em;
-        top: 0.25em;
-        position: relative;
-        margin: 0 0.5em;
-    }
-
-    .fontsampler-color-picker {
-        display: block;
-        margin: 1em 0 1em 2.5em;
-    }
-
-    .fontsampler-sample_texts {
-        min-height: 5em;
-        width: 100%;
-    }
-
-    .fontsampler-options.default-text-alignment {
-        & > div {
-            clear: both;
-            label {
-                display: inline-block;
-                margin-right: 2em;
-            }
-        }
     }
 
     .fontsampler-image-radio {
