--- a/includes/partials/styles-css-field.twig
+++ b/includes/partials/styles-css-field.twig
@@ -3,13 +3,17 @@
 {% block label %}{{ description }}{% endblock %}
 
 {% block custom %}
-    <label class="fontsampler-radio">
-        <input type="radio" name="{{ name }}_use_default" value="0"
-                {% if value is not empty %} checked="checked" {% endif %}>
-        <span class="setting-description">Use custom value<br>
-        <small>{{ additional|raw }}</small></span>
-        <input type="text" name="{{ name }}" value="{{ value }}"/>
-    </label>
+        {% if not settings %}
+            <label class="fontsampler-radio">
+                <input type="radio" name="{{ name }}_use_default" value="0"
+                    {% if value is not empty %} checked="checked" {% endif %}>
+                <span class="settings-description">Use custom value</span>
+            </label>
+        {% endif %}
+        <div class="fontsampler-options-row-values">
+            <input type="text" name="{{ name }}" value="{{ value }}"/>
+            <small>{{ additional|raw }}</small>
+        </div>
 {% endblock %}
 
 {% block default %}
@@ -17,7 +21,7 @@
         <label class="fontsampler-radio">
             <input type="radio" name="{{ name }}_use_default" value="1"
                     {% if value is empty %} checked="checked" {% endif %}>
-            <span>Use default: {{ default }}</span>
+            <span class="settings-description">Use default: <span class="fontsampler-default-value">{{ default }}</span></span>
         </label>
     {% endif %}
 {% endblock %}
