--- a/includes/sets.twig
+++ b/includes/sets.twig
@@ -2,11 +2,11 @@
 
 {% block content %}
 
-<h1>Font samplers</h1>
+<h1>Fontsamplers</h1>
 
 {% if sets is empty %}
     <em>No sets created yet.</em>
-    <p>This is where your created font samplers will be listed once you've added some below.</p>
+    <p>This is where your created fontsamplers will be listed once you've added some below.</p>
 {% else %}
     <p>Listed here are all the font samplers you have created so far.</p>
     <p>A font sampler is a number (or just one) font set and settings that are used to display a interface for testing a
@@ -79,6 +79,9 @@
 
 {% endif %}
 
-<a class="button button-primary" href="?page=fontsampler&amp;subpage=set_create">Create a new font sampler</a>
+<a class="button add" href="?page=fontsampler&amp;subpage=set_create">
+    <i class="icon">+</i>
+    <span>Create a new font sampler</span>
+</a>
 
 {% endblock %}
